# www.ianlewis.org

./: .aqua-checksums.json  .aqua.yaml  .editorconfig  .gitignore  .gitmodules  .htmlvalidate.mjs  .htmlvalidateignore  .markdownlint.yaml  .posts.markdownlint.yaml  .textlintrc.json  .textlintrc.yaml  .todosignore  .yamllint.yaml  404.html  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  Makefile  README.md  SECURITY.md  _config.mock.yml  _config.yml  about.md  aqua-checksums.json  aqua.yaml  eslint.config.mjs  ian@ianlewis.org.pem.pub.txt  include.mk  index.md  mypy.ini  netlify.toml  package-lock.json  package.json  projects.md  pyproject.toml  renovate.json5  requirements-dev.txt  requirements.txt  stylelint.config.mjs  (+2 more)
.bundle/: config
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: blog_post.yaml  bug_report.md  config.yml
.github/problem_matchers/: markdownlint-cli2.json  textlint.json
.github/workflows/: pre-submit.units.yml  pull_request.autofix.yml  pull_request.tests.yml  (+22 more)
.well-known/: keybase.txt
_data/: projects.yaml
_includes/: head.html
_layouts/: default.html  home.html  page.html  post.html  post_list.html  tag.html
_plugins/: tags.rb
_sass/: _custom.scss  _syntax.scss  _vars.scss  dark.scss  plain.scss  search.scss  toggle.scss
content/: 404.html  ian@ianlewis.org.pem.pub  index.md  robots.txt  sitemap.xml
en/: feed.xml  index.html  index.md
jp/: feed.xml  index.html  index.md
scripts/: README.md  check-recent-posts.py  check-redirects.py  check-special-dates.py  new_content.sh
til/: feed.xml
(+681 files in other folders)
