[project]
name = "www-ianlewis-org"
version = "0.0.0"
# NOTE: this should match the major/minor version in .python-version.
requires-python = ">=3.14"

[build-system]
requires = ["setuptools ==83.0.0"]
build-backend = "setuptools.build_meta"

# This is required to prevent setuptools from trying to find packages in the
# current directory.
[tool.setuptools.packages.find]
include = []

[dependency-groups]
dev = [
    "mypy==1.20.1",
    "types-PyYAML==6.0.12.20260408",
    "yamllint==1.38.0",
    "zizmor==1.25.2",
]
